--- a/bio.html
+++ b/bio.html
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="css/styles.css">
-		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-		<title></title>
-	</head>
-	<body>
-		<header class="bio-main-header">
-			Elliot Higgs
-		</header>
-			<ul class="menu">
-				<li><a href="index.html">
-					<span class="menu-text">Home</span>
-				</a>
-			</li>
-			<li><a href="bio.html">
-				<span class="menu-text">Bio</span>
-			</a>
-		</li>
-		<li><a href="contact.html">
-			<span class="menu-text">Contact</span>
-		</a>
-	</li>
-	<li><a href="cv.html">
-		<span class="menu-text">CV</span>
-	</a>
-</li>
-</ul>
-<main class="bio-main">
-MAIN
-</main>
-<footer class="bio-footer">
-This is my footer
-</footer>
-</body>
+
+    <head>
+        <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <title></title>
+    </head>
+
+    <body>
+        <header class="main-header">
+            Elliot Higgs
+        </header>
+        <nav class="menu">
+            <ul class="nav">
+                <li class="index-link">
+                    <a href="index.html">
+                        <span class="menu-text">Home</span>
+                    </a>
+                </li>
+                <li class="bio-link">
+                    <a href="bio.html">
+                        <span class="menu-text">Bio</span>
+                    </a>
+                </li>
+                <li class="contact-link">
+                    <a href="contact.html">
+                        <span class="menu-text">Contact</span>
+                    </a>
+                </li>
+                <li class="cv-link">
+                    <a href="cv.html">
+                        <span class="menu-text">CV</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="bio-main-container">
+            <main class="bio-main">
+                <section class="MainTest">Picture will go here soon(tm)</section>
+            </main>
+        </div>
+        <div class="footer-container">
+            <footer class="footer">
+                <section class="footer-content">
+                    Sometimes i post things on <a href="https://twitter.com/H1ggsyx">Twitter</a> and I stream once a year on <a href="https://www.twitch.tv/h1ggsy">Twitch</a>
+                </section>
+            </footer>
+        </div>
+    </body>
+
 </html>
