--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-                <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
         <title>Bio Page</title>
     </head>
 
@@ -56,6 +56,10 @@
                                 <a href="https://www.facebook.com/HiggsEll">
                                     <span id="footer-item" class="fa fa-facebook fa-3x" aria-hidden="true"></span>
                                 </a>
+                                <li class="footer-item">
+                                    <a href="https://github.com/EllH/">
+                                        <span id="footer-item" class="fa fa-github fa-3x" aria-hidden="true"></span>
+                                    </a>
                 </ul>
             </footer>
         </div>
