Bio Content Layout Added

--- a/bio.html
+++ b/bio.html
@@ -38,7 +38,8 @@
     </nav>
     <div class="bio-main-container">
         <main class="bio-main">
-            <section class="MainTest">Picture will go here soon(tm)</section>
+            <section class="AboutMe-Header">About Me</section>
+            <section class="AboutMe-Text">test text</section>
         </main>
     </div>
     <div class="footer-container">
