--- a/bio.html
+++ b/bio.html
@@ -39,7 +39,12 @@
     <div class="bio-main-container">
         <main class="bio-main">
             <section class="AboutMe-Header">About Me</section>
-            <section class="AboutMe-Text">test text</section>
+            <section class="AboutMe-Text">
+                I'm an Computing(Software Engineering) student at<br>
+                University of Northampton. I have a strong passion<br> 
+                for creating things and coding. In my free time,<br>
+                i enjoy listening to music and playing with cats.   
+            </section>
         </main>
     </div>
     <div class="footer-container">
