--- a/bio.html
+++ b/bio.html
@@ -40,10 +40,10 @@
         <main class="bio-main">
             <section class="AboutMe-Header">About Me</section>
             <section class="AboutMe-Text">
-                I'm an Computing(Software Engineering) student at<br>
+                I'm a Computing(Software Engineering) student at<br>
                 University of Northampton. I have a strong passion<br> 
                 for creating things and coding. In my free time,<br>
-                i enjoy listening to music and playing with cats.   
+                I enjoy listening to music and playing with cats.
             </section>
         </main>
     </div>
