--- a/bio.html
+++ b/bio.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -40,10 +41,10 @@
         <main class="bio-main">
             <section class="AboutMe-Header">About Me</section>
             <section class="AboutMe-Text">
-                I'm a Computing(Software Engineering) student at<br>
-                University of Northampton. I have a strong passion<br> 
-                for creating things and coding. In my free time,<br>
-                I enjoy listening to music and playing with cats.
+                I'm a Computing(Software Engineering) student at
+                <br> University of Northampton. I have a strong passion
+                <br> for creating things and coding. In my free time,
+                <br> I enjoy listening to music and playing with cats.
             </section>
         </main>
     </div>
